nose que cambio jeje

--- a/SensorRFID/SensorRFID/Debug/Makefile
+++ b/SensorRFID/SensorRFID/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../lib/http.c \
 ../lib/ds3231.c \
 ../lib/extfun.c \
 ../lib/i2c.c \
@@ -55,6 +56,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+lib/http.o \
 lib/ds3231.o \
 lib/extfun.o \
 lib/i2c.o \
@@ -64,6 +66,7 @@ lib/uart.o \
 main.o
 
 OBJS_AS_ARGS +=  \
+lib/http.o \
 lib/ds3231.o \
 lib/extfun.o \
 lib/i2c.o \
@@ -73,6 +76,7 @@ lib/uart.o \
 main.o
 
 C_DEPS +=  \
+lib/http.d \
 lib/ds3231.d \
 lib/extfun.d \
 lib/i2c.d \
@@ -82,6 +86,7 @@ lib/uart.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
+lib/http.d \
 lib/ds3231.d \
 lib/extfun.d \
 lib/i2c.d \
@@ -104,6 +109,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+lib/http.o: ../lib/http.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include" -I"../include" -I"../lib"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 lib/ds3231.o: ../lib/ds3231.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
